metadata/force-app/main/default/objects/CustomName_gaBaY__c/CustomName_gaBaY__c.object-meta.xml
<CustomObject>
    <description>Description_bODts</description>
    <label>CustomLabel_RrART</label>
    <nameField>
        <label>CustomLabel_RrART</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_RrARTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>