metadata/force-app/main/default/objects/CustomName_gaBaY__c/fields/CustomField_ZYZPq__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ZYZPq__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielduUJqF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>